# g2cd

./: .bzrignore  .gitignore  .mapfile  AGENTS.md  G2Acceptor.c  G2Acceptor.h  G2ConHelper.c  G2ConHelper.h  G2ConRegistry.c  G2ConRegistry.h  G2Connection.c  G2Connection.h  G2GUIDCache.c  G2GUIDCache.h  G2Handler.c  G2Handler.h  G2HeaderFieldsSort.c  G2HeaderStrings.h  G2KHL.c  G2KHL.h  G2MainServer.c  G2MainServer.h  G2Packet.c  G2Packet.h  G2PacketSerializer.c  G2PacketSerializer.h  G2PacketSerializerStates.h  G2PacketTyperGenerator.c  G2QHT.c  G2QHT.h  G2QueryKey.c  G2QueryKey.h  G2UDP.c  G2UDP.h  G2UDPPValid.bpf  Makefile  README  README.md  arflock.c  autogen.sh  (+19 more)
.agents/references/: PERFORMANCE.md  SECURITY.md
.agents/skills/gitnexus/gitnexus-cli/: SKILL.md
.github/workflows/: anti-vendor-lockin.yml  opencode.yml
lib/: HZP_REFERENCE.md  Makefile  adler32.c  aes.c  aes.h  aes_tab_gen.c  ansi_prng.c  ansi_prng.h  atomic.c  atomic.h  backtrace.c  backtrace.h  bitfield_rle.c  byteorder.h  combo_addr.c  combo_addr.h  config_parser.c  config_parser.h  cpy_rest.c  entities.c  five_tab_gen.c  flsst.c  guid.c  guid.h  hlist.h  hthash.c  hthash.h  hzp.c  hzp.h  inet_ntop.c  inet_pton.c  introsort.c  itoa.h  list.h  log_facility.c  log_facility.h  mem_searchrn.c  mem_spn_ff.c  memand.c  memchr.c  (+56 more)
lib/alpha/: adler32.c  alpha.h  atomic.h  flsst.c  mem_searchrn.c  mem_spn_ff.c  memchr.c  mempopcnt.c  popcountst.c  str_spn_space.c  strchrnul.c  strlen.c  strncasecmp_a.c  strnlen.c  strrchr.c  to_base16.c  to_base32.c  tstrchrnul.c  tstrlen.c  unaligned.h
lib/arm/: adler32.c  aes.c  atomic.h  flsst.c  mem_searchrn.c  memand.c  memchr.c  memneg.c  mempopcnt.c  memxorcpy.c  my_neon.h  popcountst.c  strchrnul.c  strlen.c  strncasecmp_a.c  strnlen.c  strrchr.c  strreverse_l.c  to_base16.c  to_base32.c  tstrchrnul.c  tstrlen.c  unaligned.h
lib/generic/: adler32.c  aes.c  atomic.c  atomic.h  big_endian.h  cpy_rest.c  flsst.c  little_endian.h  mem_searchrn.c  mem_spn_ff.c  memand.c  memchr.c  memcpy.c  memcpy_rev.c  memmove.c  memneg.c  mempcpy.c  mempopcnt.c  memxor.c  memxorcpy.c  my_bitops.c  popcountst.c  str_spn_space.c  strchrnul.c  strlen.c  strlpcpy.c  strncasecmp_a.c  strnlen.c  strnpcpy.c  strrchr.c  strreverse_l.c  to_base16.c  to_base32.c  tstrchrnul.c  tstrlen.c  tstrncmp.c  unaligned.h
lib/i386/: atomic.h  flsst.c  memand.c  memneg.c  memxor.c  strnlen.c  x86.h
lib/ia64/: adler32.c  atomic.h  flsst.c  ia64.h  mem_searchrn.c  memchr.c  mempopcnt.c  popcountst.c  strchrnul.c  strlen.c  strncasecmp_a.c  strnlen.c  strrchr.c  to_base16.c  to_base32.c  tstrchrnul.c  tstrlen.c  unaligned.h
lib/mips/: adler32.c  atomic.h  flsst.c  memchr.c  mempopcnt.c  my_mips.h  strchrnul.c  strlen.c  strnlen.c  tstrchrnul.c  tstrlen.c  unaligned.h
lib/parisc/: memchr.c  parisc.h  str_spn_space.c  strchrnul.c  strlen.c  strncasecmp_a.c  strnlen.c  strrchr.c  tstrchrnul.c  tstrlen.c  unaligned.h
lib/ppc/: adler32.c  aes.c  atomic.h  cpy_rest.c  flsst.c  mem_searchrn.c  mem_spn_ff.c  memand.c  memchr.c  memneg.c  mempopcnt.c  memxor.c  memxorcpy.c  popcountst.c  ppc.h  ppc_altivec.h  str_spn_space.c  strchrnul.c  strlen.c  strlpcpy.c  strncasecmp_a.c  strnlen.c  strnpcpy.c  strrchr.c  strreverse_l.c  to_base16.c  tstrchrnul.c  tstrlen.c  unaligned.h
lib/ppc64/: flsst.c  memand.c  memneg.c  memxor.c  popcountst.c
lib/reference/: ATOMIC_REFERENCE.md  HZP_REFERENCE.md  OTHER_REFERENCE.md
lib/sparc/: adler32.c  atomic.h  cpy_rest.c  memand.c  memcpy.c  memneg.c  mempcpy.c  mempopcnt.c  memxorcpy.c  popcountst.c  sparc_vis.h  unaligned.h
lib/sparc64/: atomic.h  mempopcnt.c  popcountst.c
lib/tile/: adler32.c  flsst.c  mem_searchrn.c  mem_spn_ff.c  memand.c  memchr.c  memcpy.c  memneg.c  mempopcnt.c  memxorcpy.c  popcountst.c  str_spn_space.c  strchrnul.c  strlen.c  strlpcpy.c  strncasecmp_a.c  strnlen.c  strrchr.c  tile.h  to_base16.c  to_base32.c  tstrchrnul.c  tstrlen.c  unaligned.h
lib/unaligned/: access_ok.h  be_byteshift.h  be_memmove.h  be_struct.h  generic.h  le_byteshift.h  le_memmove.h  le_struct.h  memmove.h  packed_struct.h
lib/x86/: adler32.c  aes.c  atomic.h  cpy_rest.c  flsst.c  mem_searchrn.c  mem_spn_ff.c  memand.c  memand_tmpl.c  memchr.c  memcpy.c  memcpy_tmpl.c  memneg.c  memneg_tmpl.c  mempopcnt.c  memxor.c  memxor_tmpl.c  memxorcpy.c  memxorcpy_tmpl.c  my_bitops.c  popcountst.c  strchrnul.c  strlen.c  strlpcpy.c  strncasecmp_a.c  strnlen.c  strnpcpy.c  strrchr.c  strreverse_l.c  to_base16.c  to_base32.c  tstrchrnul.c  tstrlen.c  unaligned.h  x86.h  x86_features.h
lib/x86_64/: atomic.h  flsst.c  memand.c  memneg.c  memxor.c
m4/: acx_pthread.m4  ax_check_var.m4  ax_check_zlib.m4  ax_sys_dev_poll.m4  pkg.m4  test_asm.m4
obs_build/: debian.changelog  debian.control  debian.rules  g2cd-Debian_5.0.dsc  g2cd-Debian_6.0.dsc  g2cd-Debian_Etch.dsc  g2cd-xUbuntu_10.04.dsc  g2cd-xUbuntu_10.10.dsc  g2cd-xUbuntu_6.06.dsc  g2cd-xUbuntu_8.04.dsc  g2cd-xUbuntu_9.04.dsc  g2cd-xUbuntu_9.10.dsc  g2cd.dsc  g2cd.spec
zlib/: README.MODULE  module.make
